@@ -24,6 +24,10 @@ Version 1.13.6+dev:
  * Language and i18n:
    * Updated translations: British English, Czech, German, Portuguese (Brazil).
 
+ * User Interface:
+   * List boxes now keep the selected item visible when you change the sorting
+     option.
+
  * Miscellaneous and bug fixes:
    * Fixed severe lag/freeze on slow PCs (bug #25356)
 
