@@ -28,6 +28,9 @@ Version 1.13.6+dev:
  * Lua API:
    * New attributes in side proxy:
      num_units, num_villages, total_upkeep, expenses, net_income
+ * User Interface:
+   * List boxes now keep the selected item visible when you change the sorting
+     option.
  * Wesnoth Formula Engine:
    * New str_upper and str_lower functions for case transformations
  * WML Engine:
